kubernetes/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karsajobs-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karsajobs-nginx
  template:
    metadata:
      labels:
        app: karsajobs-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: karsajobs-nginx
