kubernetes/nginx/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: karsajobs-nginx
spec:
  type: ClusterIP
  selector:
    app: karsajobs-nginx
  ports:
    - port: 80
      targetPort: 80
