kubernetes/nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karsajobs-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: karsajobs-ui
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: karsajobs-backend
            port:
              number: 8080
